--- a/app/src/main/res/layout-xlarge-port/auto_period_fragment.xml
+++ b/app/src/main/res/layout-xlarge-port/auto_period_fragment.xml
@@ -13,106 +13,106 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Autonomous Period"
-        android:textSize="30sp"
         android:id="@+id/autoTextView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="50sp"/>
 
-    <TextView
+    <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/locationOfRobot"
-        android:text="Location of Robot"
-        android:textSize="25sp"
-        android:layout_centerHorizontal="true"
+        android:text="Baseline Crossed?"
+        android:id="@+id/baselineCheckBox"
+        android:layout_marginTop="30dp"
         android:layout_below="@+id/autoTextView"
-        android:layout_marginTop="25dp"
-        android:textColor="#000000" />
+        android:layout_centerHorizontal="true"
+        android:checked="false"
+        android:textSize="40sp"/>
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Attempted to place gear?"
+        android:id="@+id/gearAttemptCheckBox"
+        android:layout_marginTop="50dp"
+        android:checked="false"
+        android:textSize="40sp"
+        android:layout_below="@+id/baselineCheckBox"
+        android:layout_centerHorizontal="true"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gear successfully placed?"
-        android:textSize="20sp"
         android:id="@+id/gearSuccessCheckBox"
-        android:layout_marginTop="30dp"
+        android:layout_below="@+id/gearAttemptCheckBox"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
         android:checked="false"
-        android:layout_below="@+id/leftPegStart"
-        android:layout_alignRight="@+id/autoTextView"
-        android:layout_alignEnd="@+id/autoTextView" />
+        android:textSize="40sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/leftPegStart"
-        android:text="Left Peg"
-        android:layout_marginTop="25dp"
-        android:textSize="18sp"
-        android:layout_below="@+id/locationOfRobot"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="High goal?"
+        android:id="@+id/highCheckBox"
+        android:layout_marginTop="50dp"
+        android:checked="false"
+        android:textSize="40sp"
+        android:layout_below="@+id/gearSuccessCheckBox" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/middlePegStart"
-        android:text="Middle Peg"
-        android:textSize="18sp"
-        android:layout_alignTop="@+id/leftPegStart"
-        android:layout_above="@+id/gearSuccessCheckBox"
-        android:layout_centerHorizontal="true" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rightPegStart"
-        android:text="Right Peg"
-        android:textSize="18sp"
-        android:layout_alignTop="@+id/middlePegStart"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:text="Low goal?"
+        android:id="@+id/lowCheckBox"
+        android:checked="false"
+        android:textSize="40sp"
+        android:layout_below="@+id/gearSuccessCheckBox"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/highCheckBox" />
 
     <SeekBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/autoBallsSeekBar"
-        android:max="50"
+        android:layout_below="@+id/lowCheckBox"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:max="20"
         android:progress="0"
         android:indeterminate="false"
-        android:minWidth="275dp"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/gearSuccessCheckBox"
-        android:layout_centerHorizontal="true" />
+        android:minWidth="500dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="0"
-        android:textSize="15sp"
         android:id="@+id/zeroTextView"
         android:layout_below="@+id/autoBallsSeekBar"
         android:layout_alignLeft="@+id/autoBallsSeekBar"
-        android:layout_alignStart="@+id/autoBallsSeekBar" />
+        android:layout_alignStart="@+id/autoBallsSeekBar"
+        android:textSize="35sp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="50"
-        android:textSize="15sp"
+        android:text="20"
         android:id="@+id/tenTextView"
-        android:layout_alignBottom="@+id/zeroTextView"
-        android:layout_alignRight="@+id/autoBallsSeekBar"
-        android:layout_marginLeft="250dp"/>
+        android:textSize="35sp"
+        android:layout_below="@+id/autoBallsSeekBar"
+        android:layout_toRightOf="@+id/autoBallsSeekBar"
+        android:layout_toEndOf="@+id/autoBallsSeekBar" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Balls Made: 0"
-        android:textSize="15sp"
         android:id="@+id/ballCountTextView"
         android:layout_below="@+id/autoBallsSeekBar"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="35sp"/>
 
 </RelativeLayout>
