--- a/app/src/main/res/layout/activity_start_menu.xml
+++ b/app/src/main/res/layout/activity_start_menu.xml
@@ -90,5 +90,34 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/addPhoto" />
 
+    <Button
+        android:layout_width="95dp"
+        android:layout_height="50dp"
+        android:text="3v3"
+        android:textSize="10dp"
+        android:id="@+id/threeVThree"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@+id/scoutButton"/>
+
+    <Button
+        android:layout_width="95dp"
+        android:layout_height="50dp"
+        android:text="Team Data"
+        android:textSize="10dp"
+        android:id="@+id/teamData"
+        android:layout_below="@+id/threeVThree"
+        android:layout_centerHorizontal="true"/>
+
+    <Button
+        android:layout_width="95dp"
+        android:layout_height="50dp"
+        android:text="Pick List"
+        android:textSize="10dp"
+        android:id="@+id/pickList"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/threeVThree"
+        android:layout_marginRight="10dp"/>
+
 </RelativeLayout>
 </ScrollView>
