--- a/app/src/main/res/layout/data_list.xml
+++ b/app/src/main/res/layout/data_list.xml
@@ -35,6 +35,7 @@
         android:text="Robot Position "
         android:layout_below="@+id/matchNumberTextView"
         android:layout_toRightOf="@+id/teamColorTextView"
+        android:layout_marginLeft="5dp"
         android:id="@+id/robotPositionTV"/>
 
     <TextView
@@ -51,8 +52,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Auto High "
         android:id="@+id/autoHighScoredTextView"
-        android:layout_below="@+id/robotPositionTV"
-        android:layout_toRightOf="@+id/autoGearSuccessTextView"/>
+        android:layout_below="@+id/autoGearSuccessTextView"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -60,7 +60,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Gears Hung "
         android:id="@+id/gearsHungTextView"
-        android:layout_below="@+id/autoGearSuccessTextView"/>
+        android:layout_below="@+id/autoHighScoredTextView"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -68,8 +68,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Climb Time "
         android:id="@+id/climbTimeTextView"
-        android:layout_below="@+id/autoGearSuccessTextView"
-        android:layout_toRightOf="@+id/gearsHungTextView"/>
+        android:layout_below="@+id/gearsHungTextView"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -77,8 +76,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Climb Success "
         android:id="@+id/climbSuccessTextView"
-        android:layout_toRightOf="@+id/climbTimeTextView"
-        android:layout_below="@+id/autoHighScoredTextView"/>
+        android:layout_below="@+id/climbTimeTextView"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -86,6 +84,6 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="TBH "
         android:id="@+id/tBHTextView"
-        android:layout_below="@id/gearsHungTextView"/>
+        android:layout_below="@id/climbSuccessTextView"/>
 
 </RelativeLayout>
